Fixed hovering FavouriteIcon on mobile

--- a/src/components/main/catalogues/catalogue/catalogue-item/favourite-item-icon/favouriteItemIcon.scss
+++ b/src/components/main/catalogues/catalogue/catalogue-item/favourite-item-icon/favouriteItemIcon.scss
@@ -9,11 +9,21 @@
         stroke-width: 10%;
         fill: transparent;
     }
-    &.active,
-    &:hover {
+    &.active {
         path {
             stroke: $red;
             fill: $red;
+        }
+    }
+}
+
+@media (hover: hover) {
+    .favouriteItemIcon {
+        &:hover {
+            path {
+                stroke: $red;
+                fill: $red;
+            }
         }
     }
 }
